# lemin

./: .gitignore  CMakeLists.txt  Makefile  add_path.c  author  bellman_ford.c  calc_speed.c  copy_graphs.c  debug_func_nick.c  debug_functions.c  dijkstra.c  find_solution.c  free_hash.c  ft_atoi_validate_pos.c  get_normal_paths.c  get_set_paths.c  gnl.c  hash.c  insert_to_hash_functions.c  lem_in.h  links_functions.c  main.c  make_arr_nodes.c  move_ants.c  my_cool_algo.c  parse_functions.c  parse_input.c  pathfinder.c  print_paths.c  print_result.c  reverse_edges.c  split_node.c  test_speed_calc.c  utils.c  utils_free.c  utils_nick.c  utils_nick_2.c  utils_nick_3.c
gen_bins/: test.sh
libft/: Makefile  ft_bzero.d  ft_is_number.c  ft_isalnum.d  ft_isalpha.d  ft_isprint.c  ft_itoa.d  ft_memalloc.d  ft_memccpy.d  ft_memchr.d  ft_memcmp.d  ft_memcpy.d  ft_memdel.d  ft_memmove.d  ft_memset.d  ft_putchar.d  ft_putchar_fd.d  ft_putendl.d  ft_putendl_fd.d  ft_putnbr.d  ft_putnbr_fd.d  ft_putstr.d  ft_putstr_fd.d  ft_strcat.d  ft_strchr.d  ft_strclr.d  ft_strdel.d  ft_strdup.d  ft_strequ.d  ft_striter.d  ft_striteri.d  ft_strjoin.d  ft_strlcat.d  ft_strlen.d  ft_strmap.d  ft_strmapi.d  ft_strncat.d  ft_strncmp.d  ft_strncpy.d  ft_strnequ.d  (+10 more)
maps/: hard.map  hard_2.map  hard_3.map  hard_4.map  int_max.map  map_overflow  no_rooms  superpos.map  suurballe.map
maps/valid/: map_commands  simple1.map  suurballe.map
